--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,14 @@
 	</repositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.demoBean</groupId>
-			<artifactId>demoBean</artifactId>
-			<version>1.0.0</version>
-			<scope>system</scope>
-			<systemPath>/Users/abdelrahmanomar/Downloads/demoBean/target/demoBean-0.0.1-SNAPSHOT.jar
-			</systemPath>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.demoBean</groupId>-->
+<!--			<artifactId>demoBean</artifactId>-->
+<!--			<version>1.0.0</version>-->
+<!--			<scope>system</scope>-->
+<!--			<systemPath>/Users/abdelrahmanomar/Downloads/demoBean/target/demoBean-0.0.1-SNAPSHOT.jar-->
+<!--			</systemPath>-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
