--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.demo</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.backendtask</groupId>
+	<artifactId>backendtask</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
@@ -17,23 +17,7 @@
 		<java.version>21</java.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>demoBean</id>
-			<url>file:/Users/abdelrahmanomar/Downloads/demoBean/target/demo-0.0.1-SNAPSHOT.jar
-			</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
-<!--		<dependency>-->
-<!--			<groupId>com.demoBean</groupId>-->
-<!--			<artifactId>demoBean</artifactId>-->
-<!--			<version>1.0.0</version>-->
-<!--			<scope>system</scope>-->
-<!--			<systemPath>/Users/abdelrahmanomar/Downloads/demoBean/target/demoBean-0.0.1-SNAPSHOT.jar-->
-<!--			</systemPath>-->
-<!--		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -51,6 +35,16 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
